                             If the total number of hops (which cannot be
                             known) exceeds 20 the message is damanged
                             and will fail at the 20th node.

2004-05-06      3.0b2
                           Use /dev/arandom instead of /dev/srandom on 
                             OpenBSD (Nikolay Sturm).
                           Fall back to 3DES as Encrypt-Key cipher if we don't
                             have IDEA. - Laurent Fousse <laurent@komite.net>
                           Also sort mail into the various mboxes if autoreply
                             is not set.
                           Properly ignore whitespace in chain selection.
                           Removed unused functions in keymgt.c.
                           Added new options -V, --version, and --about.
                           Made manpage corrections.
                           Minor ncurses display tweaks.
                           General improvements for Win32 support (by 
                             goblin and Peter Palfrader).
                           Preliminary Windows Installer work.
                           On Win32, default to Application Data/Mixmaster for
                             mixmaster's basedirectory.  This can still be
                             overridden by MIXPATH or the registry entry
                             HKEY_CURRENT_USER\Software\Mixmaster\MixDir
                           Introduced new option "(e)dit configuration 
                             file" in the main menu.
                           Changed 'q)uit' to 'q)uit w/o sending' in 
                             menusend.c.
                           Added stats downloading support. Currently 
                             works under Win32 only (by goblin).
                           Fixed bug in buffers.c.

2004-?????      3.0???
                           Prefer pubring.asc over secring.pgp.